# LAN_File_Drop

./: .gitignore  CMakeLists.txt  LANFileDrop  main  main.cpp  transfer_history.csv
discovery/: UdpBroadcast.cpp  UdpListner.cpp
transfer/: History.cpp  Receiver.cpp  Sender.cpp
webui/: package.json  server.js
webui/public/: app.js  index.html  styles.css
